--- a/server/package.json
+++ b/server/package.json
@@ -2,16 +2,21 @@
   "name": "server",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "/src/app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "knex migrate:latest && knex seed:run && nodemon src/app.js",
+    "start-dev": "knex migrate:rollback && knex migrate:latest && knex seed:run && nodemon src/app.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.18.2",
     "knex": "^2.5.1",
     "pg": "^8.11.1"
+  },
+  "devDependencies": {
+    "nodemon": "^3.0.1"
   }
 }
